Migrating to Fabric

--- a/mods/searchables.pw.toml
+++ b/mods/searchables.pw.toml
@@ -1,13 +1,13 @@
 name = "Searchables"
-filename = "Searchables-forge-1.20.1-1.0.2.jar"
+filename = "Searchables-fabric-1.20.1-1.0.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "15548b2b50b700c0ffe2b9c4de80dfe510db208d"
+hash = "72f8ae2a31ccf95ed5d119abb8c3bcd174b63398"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4779110
+file-id = 4779109
 project-id = 858542
