--- a/mods/appleskin.pw.toml
+++ b/mods/appleskin.pw.toml
@@ -1,13 +1,13 @@
 name = "AppleSkin"
-filename = "appleskin-forge-mc1.20.1-2.5.1.jar"
+filename = "appleskin-fabric-mc1.20.1-2.5.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "81919356f84eab14258db98924b66c3c38e372b1"
+hash = "d0f11243f79c071416bbcee781ae93eb57a0283c"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4770828
+file-id = 4770825
 project-id = 248787
