--- a/mods/attributefix.pw.toml
+++ b/mods/attributefix.pw.toml
@@ -1,13 +1,13 @@
 name = "AttributeFix"
-filename = "AttributeFix-Forge-1.20.1-21.0.4.jar"
+filename = "AttributeFix-Fabric-1.20.1-21.0.4.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "6eb69343eb21d38f95d1b1d00e6bc777bdb336fa"
+hash = "9688bf005eb31d7cc9576f535acf819376d47068"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4911084
+file-id = 4911083
 project-id = 280510
