--- a/mods/bookshelf.pw.toml
+++ b/mods/bookshelf.pw.toml
@@ -1,13 +1,13 @@
 name = "Bookshelf"
-filename = "Bookshelf-Forge-1.20.1-20.1.9.jar"
+filename = "Bookshelf-Fabric-1.20.1-20.1.9.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "5764ceb97546bdf075180e670330f7f9c4b948fd"
+hash = "f6ff9e10bc9b89492666d228239039c08469ff82"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5084135
+file-id = 5084134
 project-id = 228525
