--- a/mods/clumps.pw.toml
+++ b/mods/clumps.pw.toml
@@ -1,13 +1,13 @@
 name = "Clumps"
-filename = "Clumps-forge-1.20.1-12.0.0.3.jar"
+filename = "Clumps-fabric-1.20.1-12.0.0.3.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "475f8cfb0bc678d0c5275190daa80fc272399fc5"
+hash = "6f1addbc65e71f677feae4cc2ef253b51af16ad9"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4614555
+file-id = 4614554
 project-id = 256717
