--- a/mods/controlling.pw.toml
+++ b/mods/controlling.pw.toml
@@ -1,13 +1,13 @@
 name = "Controlling"
-filename = "Controlling-forge-1.20.1-12.0.2.jar"
+filename = "Controlling-fabric-1.20.1-12.0.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "f6d3cdd3ec68c5590cf5b2e89c38dbf031824bfd"
+hash = "8a61ca1600e33c73598530f1e208bb07081fdcd6"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4646682
+file-id = 4646681
 project-id = 250398
