--- a/mods/jade.pw.toml
+++ b/mods/jade.pw.toml
@@ -1,13 +1,13 @@
 name = "Jade 🔍"
-filename = "Jade-1.20.1-forge-11.7.1.jar"
+filename = "Jade-1.20-fabric-11.8.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "6a17415a34591168203b8ed6f334a349da55f797"
+hash = "49b63e1c3305d946f45a50134f63698d8c7b0ec0"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4986594
+file-id = 5106745
 project-id = 324717
