--- a/mods/jei.pw.toml
+++ b/mods/jei.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Items (JEI)"
-filename = "jei-1.20.1-forge-15.3.0.4.jar"
+filename = "jei-1.20.1-fabric-15.3.0.4.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "1a431d34991d51998f9971c4291bac2d58eaa154"
+hash = "d5e29fead4928513444b6005968fb6a6aa6aa8e8"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5101366
+file-id = 5101365
 project-id = 238222
