--- a/mods/journeymap.pw.toml
+++ b/mods/journeymap.pw.toml
@@ -1,13 +1,13 @@
 name = "JourneyMap"
-filename = "journeymap-1.20.1-5.9.18p1-forge.jar"
+filename = "journeymap-1.20.1-5.9.18p1-fabric.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "19b4ff76f2cd7d37767f59ebe1cbbe83c719a237"
+hash = "289a212bc8da90b1ef697b69c28f36f0baa92518"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 5157733
+file-id = 5157658
 project-id = 32274
