--- a/mods/macaws-bridges.pw.toml
+++ b/mods/macaws-bridges.pw.toml
@@ -1,13 +1,13 @@
 name = "Macaw's Bridges"
-filename = "mcw-bridges-2.1.1-mc1.20.1forge.jar"
+filename = "mcw-bridges-2.1.0-mc1.20.1fabric.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "8d6d2606ce20f47baf553909bb18bf332ca4668b"
+hash = "3063f288eab2cb1bba20d966f87922e7f0a803df"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4605466
+file-id = 4599790
 project-id = 351725
