--- a/mods/better-advancements.pw.toml
+++ b/mods/better-advancements.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Advancements"
 filename = "BetterAdvancements-Fabric-1.20.1-0.3.2.162.jar"
-side = "both"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/Q2OqKxDG/versions/MoIoigS0/BetterAdvancements-Fabric-1.20.1-0.3.2.162.jar"
 hash-format = "sha1"
-hash = "5e41ad31899ec00f9ac3727432ad831fcd885abb"
-mode = "metadata:curseforge"
+hash = "eba2da34d2b0f842336abd8610e4b5e111c1598d"
 
 [update]
-[update.curseforge]
-file-id = 4985149
-project-id = 272515
+[update.modrinth]
+mod-id = "Q2OqKxDG"
+version = "MoIoigS0"
