--- a/mods/bookshelf-lib.pw.toml
+++ b/mods/bookshelf-lib.pw.toml
@@ -3,11 +3,11 @@ filename = "Bookshelf-Fabric-1.20.1-20.1.9.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/uy4Cnpcm/versions/JDIOMwx2/Bookshelf-Fabric-1.20.1-20.1.9.jar"
 hash-format = "sha1"
 hash = "f6ff9e10bc9b89492666d228239039c08469ff82"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 5084134
-project-id = 228525
+[update.modrinth]
+mod-id = "uy4Cnpcm"
+version = "JDIOMwx2"
