--- a/mods/clumps.pw.toml
+++ b/mods/clumps.pw.toml
@@ -3,11 +3,11 @@ filename = "Clumps-fabric-1.20.1-12.0.0.3.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/Wnxd13zP/versions/l3neajc5/Clumps-fabric-1.20.1-12.0.0.3.jar"
 hash-format = "sha1"
-hash = "6f1addbc65e71f677feae4cc2ef253b51af16ad9"
-mode = "metadata:curseforge"
+hash = "ef8d6b4b83b99153eca38fd1facbb1470cff7ade"
 
 [update]
-[update.curseforge]
-file-id = 4614554
-project-id = 256717
+[update.modrinth]
+mod-id = "Wnxd13zP"
+version = "l3neajc5"
