--- a/mods/controlling.pw.toml
+++ b/mods/controlling.pw.toml
@@ -1,13 +1,13 @@
 name = "Controlling"
 filename = "Controlling-fabric-1.20.1-12.0.2.jar"
-side = "both"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/xv94TkTM/versions/6ipZLQSK/Controlling-fabric-1.20.1-12.0.2.jar"
 hash-format = "sha1"
-hash = "8a61ca1600e33c73598530f1e208bb07081fdcd6"
-mode = "metadata:curseforge"
+hash = "8d6badebb7f2aea04793c92174dafa946b13f1e9"
 
 [update]
-[update.curseforge]
-file-id = 4646681
-project-id = 250398
+[update.modrinth]
+mod-id = "xv94TkTM"
+version = "6ipZLQSK"
