--- a/mods/enchantment-descriptions.pw.toml
+++ b/mods/enchantment-descriptions.pw.toml
@@ -1,13 +1,13 @@
 name = "Enchantment Descriptions"
 filename = "EnchantmentDescriptions-Fabric-1.20.1-17.0.14.jar"
-side = "both"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/UVtY3ZAC/versions/yWTmnP6Q/EnchantmentDescriptions-Fabric-1.20.1-17.0.14.jar"
 hash-format = "sha1"
 hash = "dc1ebf0e1fa553b299cf3130d3ef4e17ec334e34"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 5136987
-project-id = 250419
+[update.modrinth]
+mod-id = "UVtY3ZAC"
+version = "yWTmnP6Q"
