--- a/mods/jade.pw.toml
+++ b/mods/jade.pw.toml
@@ -3,11 +3,11 @@ filename = "Jade-1.20-fabric-11.8.0.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/nvQzSEkH/versions/CciLEAMK/Jade-1.20-fabric-11.8.0.jar"
 hash-format = "sha1"
 hash = "49b63e1c3305d946f45a50134f63698d8c7b0ec0"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 5106745
-project-id = 324717
+[update.modrinth]
+mod-id = "nvQzSEkH"
+version = "CciLEAMK"
