--- a/mods/just-enough-resources-jer.pw.toml
+++ b/mods/just-enough-resources-jer.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Resources (JER)"
 filename = "JustEnoughResources-Fabric-1.20.1-1.4.0.247.jar"
-side = "both"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/uEfK2CXF/versions/9HWvOVzO/JustEnoughResources-Fabric-1.20.1-1.4.0.247.jar"
 hash-format = "sha1"
-hash = "5377fa98f9591b33092e4c7a6f6ba773365928a8"
-mode = "metadata:curseforge"
+hash = "505b27e4e902645d8104133a2a5d9ea409b645b1"
 
 [update]
-[update.curseforge]
-file-id = 5057223
-project-id = 240630
+[update.modrinth]
+mod-id = "uEfK2CXF"
+version = "9HWvOVzO"
