--- a/mods/macaws-bridges.pw.toml
+++ b/mods/macaws-bridges.pw.toml
@@ -3,11 +3,11 @@ filename = "mcw-bridges-2.1.0-mc1.20.1fabric.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/GURcjz8O/versions/K88QqM25/mcw-bridges-2.1.0-mc1.20.1fabric.jar"
 hash-format = "sha1"
 hash = "3063f288eab2cb1bba20d966f87922e7f0a803df"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 4599790
-project-id = 351725
+[update.modrinth]
+mod-id = "GURcjz8O"
+version = "K88QqM25"
