--- a/mods/voidheart.pw.toml
+++ b/mods/voidheart.pw.toml
@@ -3,6 +3,6 @@ filename = "voidheart-1.0.0.jar"
 side = "both"
 
 [download]
-url = "https://i.ferenyr.fr/voidheart-1.0.0.jar"
+url = "https://i.ferenyr.fr/voidheart-1.0.0-a1.jar"
 hash-format = "sha1"
-hash = "c25558ba2e28fc469e0a32df52dd1c5e7e3f7cd6"
+hash = "e4c6a4eada52a64e4cdfab6e69b3065e50fa3847"
