--- a/mods/doggy-talents-next.pw.toml
+++ b/mods/doggy-talents-next.pw.toml
@@ -1,13 +1,13 @@
 name = "Doggy Talents Next"
-filename = "DoggyTalentsNext[Fabric]-1.20.1-1.18.11.jar"
+filename = "DoggyTalentsNext[Fabric]-1.20.1-1.18.10.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/oXgmplvv/versions/UyUUqQaH/DoggyTalentsNext%5BFabric%5D-1.20.1-1.18.10.jar"
 hash-format = "sha1"
-hash = "21ee176604d6853178c9115872888b3761914efc"
-mode = "metadata:curseforge"
+hash = "761f2d3961afe475b80785922129250dd4a81c47"
 
 [update]
-[update.curseforge]
-file-id = 5208488
-project-id = 694492
+[update.modrinth]
+mod-id = "oXgmplvv"
+version = "UyUUqQaH"
